# matter-homekit-ac

./: .gitignore  README.md  pyproject.toml
examples/: config.json
matter_homekit_ac/: accessory.py  main.py  matter_client.py
